--- a/css/checkout.css
+++ b/css/checkout.css
@@ -38,3 +38,57 @@ body{
     border-bottom: 2px solid #F2F2F2;
     color: #F2F2F2;
 }
+
+
+/* Table */
+
+/* Table Styles */
+table {
+    margin-top: 90px;
+    border-radius: 40px;
+    background-color: rgba(255, 255, 255, 0.5); /* Transparent white background */
+    border: 2px solid #FFFFFF; /* White border */
+}
+
+
+#myTable {
+    background-color: rgba(255, 255, 255, 0.5);
+    border: 2px solid #FFFFFF;
+}
+/* Rest of your table styling remains unchanged */
+
+.trip-title{
+    font-family: 'Yuji Boku', serif;
+    font-size: 48px;
+    margin-top: 240px;
+    margin-left: 550px;
+    color: white;
+
+}
+
+tbody{
+    width: 1057px; 
+}
+
+.image1{
+    width: 200px;
+    height: 200px;
+    padding-left: 20px;
+}
+
+.image2{
+    width: 200px;
+    height: 200px;
+    padding-left: 20px;
+}
+
+.image3{
+    width: 200px;
+    height: 200px;
+    padding-left: 20px;
+}
+
+.thead{
+    margin-left: -20px;
+}
+
