--- a/css/trips.css
+++ b/css/trips.css
@@ -95,5 +95,76 @@ template#tripTemplate {
     display: none;
 }
 
+/* Footer */
+
+footer{
+   
+    width: 1440px;
+    height: 416px;
+    background: #86B3BC;
+    color: #F2F2F2;
+}
+
+.footer-logo{
+    padding-left: 57px;
+    margin-top: 90px;
+    inline-size: 290px;
+
+}
+
+.footer-info{
+    margin-top: -150px;
+    
+}
+
+footer ul{
+    font-family: 'Libre Baskerville', serif;  
+    list-style: none;
+    
+}
+
+.list-1{
+
+    margin-left: 350px;
+    margin-top: -110px;
+    line-height: 34px;
+}
+
+.list-2{
+
+
+    margin-left: 510px;
+    margin-top: -187px;
+    line-height: 34px;
+
+}
+
+.list-3{
+
+
+    margin-left: 740px;
+    margin-top: -187px;
+    line-height: 34px;
+
+}
+
+.list-4{
+
+
+    margin-left: 910px;
+    margin-top: -120px;
+    line-height: 34px;
+
+}
+
+.copyright{
+    margin-left: 59px;
+    margin-top: 150px;
+}
+
+.socials{
+    margin-left: 1100px;
+    margin-top: -70px;
+}
 
 
